--- a/async-crud/admin/views/edit_client.html
+++ b/async-crud/admin/views/edit_client.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doguito Petshop | Atualizar cliente</title>
+    <title>Lil Dog Petshop | Update client</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../assets/css/base/base.css">
-    <link rel="stylesheet" href="../assets/css/componentes/cabecalho.css">
-    <link rel="stylesheet" href="../assets/css/componentes/cartao.css">
-    <link rel="stylesheet" href="../assets/css/cadastra_cliente.css">
-    <link rel="stylesheet" href="../assets/css/componentes/inputs.css">
-    <link rel="stylesheet" href="../assets/css/componentes/botao.css">
+    <link rel="stylesheet" href="../assets/css/components/header.css">
+    <link rel="stylesheet" href="../assets/css/components/card.css">
+    <link rel="stylesheet" href="../assets/css/register_client.css">
+    <link rel="stylesheet" href="../assets/css/components/inputs.css">
+    <link rel="stylesheet" href="../assets/css/components/button.css">
 </head>
 <body>
-    <header class="cabecalho container">
-        <img src="../assets/img/doguitoadm.svg" alt="Logo Doguito" class="cabecalho__logo">
+    <header class="header container">
+        <img src="../assets/img/doguitoadm.svg" alt="Lil Dog Logo" class="header__logo">
         <nav>
-            <ul class="cabecalho__lista-navegacao">
-                <li class="cabecalho__link"><a href="#">Dashboard</a></li>
-                <li class="cabecalho__link"><a href="#">Produtos</a></li>
-                <li class="cabecalho__link"><a href="lista_cliente.html">Clientes </a></li>
-                <li class="cabecalho__link"><a href="#">Pets</a></li>
+            <ul class="header__list-nav">
+                <li class="header__link"><a href="#">Dashboard</a></li>
+                <li class="header__link"><a href="#">Products</a></li>
+                <li class="header__link"><a href="list_client.html">Clients</a></li>
+                <li class="header__link"><a href="#">Pets</a></li>
             </ul>
         </nav>
     </header>
-    <main class="container flex flex--centro flex--coluna">
-        <section class="cartao cadastro">
-            <h1 class="cartao__titulo">Edição</h1>
-            <form action="#" class="flex flex--coluna" data-form>
+    <main class="container flex flex--center flex--column">
+        <section class="card register">
+            <h1 class="card__title">Edit</h1>
+            <form action="#" class="flex flex--column" data-form>
                 <div class="input-container">
                     <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required data-nome>
                     <label class="input-label" for="nome">Nome</label>
