--- a/async-crud/admin/assets/css/components/modal.css
+++ b/async-crud/admin/assets/css/components/modal.css
@@ -1,5 +1,5 @@
 .modal {
-    background-color: var(--cor-contraste-claro);
+    background-color: var(--color-contrast-bright);
     border-radius: 10px;
     padding: 1.75rem;
     box-sizing: border-box;
@@ -8,7 +8,7 @@
 }
 
 .modal-container {
-    background-color: var(--cor-transparencia);
+    background-color: var(--color-transparency);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,30 +20,30 @@
     transition: 0.25s;
 }
 
-.modal__titulo {
-    font-size: var(--fonte-tamanho-modal-titulo);
-    color: var(--cor-aviso);
+.modal__title {
+    font-size: var(--font-size-modal-title);
+    color: var(--color-warning);
     margin-bottom: 1rem;
 }
 
-.modal__botao {
-    font-size: var(--fonte-tamanho-modal-botao);
+.modal__button {
+    font-size: var(--font-size-modal-button);
 }
 
-.modal__texto { 
+.modal__text { 
     margin-bottom: 3.875rem;
 }
 
-.modal__botao--confirmar {
-    color: var(--cor-aviso);
+.modal__button--confirm {
+    color: var(--color-warning);
     margin-right: 2.25rem;
 }
 
-.modal__botao-container {
+.modal__button-container {
     display: flex;
 }
 
-.modal__fechar {
+.modal__close {
     position: absolute;
     display: block;
     height: 1rem;
@@ -52,7 +52,7 @@
     right: 1.75rem;
 }
 
-.modal--fechado {
+.modal--closed {
     left: -100vw;
     transition: .25s;
 }
