--- a/async-crud/admin/assets/css/error_general.css
+++ b/async-crud/admin/assets/css/error_general.css
@@ -1,22 +1,22 @@
-.cadastro-cartao {
+.register-card {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
 
-.cadastro-cartao__icone-concluido {
+.register-card__icon-finished {
     display: block;
     width: 3.5rem;
     height: 3.5rem;
 
     margin-bottom: 1rem;
 
-    background-image: url(../img/checkmark.svg);
+    background-image: url(../img/denied.svg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.cadastro-cartao__titulo {
+.register-cartd__title {
     max-width: 20rem;
 }
